--- a/.github/workflows/valide-pr-title.yml
+++ b/.github/workflows/valide-pr-title.yml
@@ -1,15 +1,16 @@
-name: Lint Commit Messages
-on: 
+name: Validate PR Title
+
+on:
   pull_request:
     types: [opened, edited, synchronize]
 
-permissions:
-  contents: read
-  pull-requests: read
-
 jobs:
-  commitlint:
+  check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: wagoid/commitlint-github-action@v6
+      - name: Validate PR title against Conventional Commits
+        uses: amannn/action-semantic-pull-request@v4
+        with:
+          types: >
+            feat, fix, chore, refactor, perf, test, docs,
+            style, ci, build, revert
