--- a/.github/workflows/valide-pr-title.yml
+++ b/.github/workflows/valide-pr-title.yml
@@ -1,15 +1,24 @@
 name: Validate PR Title
 
 on:
-  pull_request:
-    types: [opened, edited, synchronize]
+  pull_request_target:
+    types:
+      - opened
+      - edited
+      - synchronize
+      - reopened
+
+permissions:
+  pull-requests: read
 
 jobs:
   check:
     runs-on: ubuntu-latest
     steps:
       - name: Validate PR title against Conventional Commits
-        uses: amannn/action-semantic-pull-request@v4
+        uses: amannn/action-semantic-pull-request@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           types: >
             feat, fix, chore, refactor, perf, test, docs,
