ci: fixed workflow branches

--- a/.github/workflows/job_security_scan.yml
+++ b/.github/workflows/job_security_scan.yml
@@ -3,7 +3,7 @@ name: Security Scan
 on:
   workflow_dispatch:
   pull_request:
-    branches: [staging]
+    branches: [*]
 
 jobs:
   security-check:
