--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -21,7 +21,7 @@ jobs:
       id-token: write # to enable use of OIDC for npm provenance
 
     outputs:
-      released: ${{ steps.semantic.outputs.new_release_published }}
+      released: ${{ steps.release.outputs.new_release_published }}
 
     steps:
       - name: Setup | Checkout Repository on Release Branch
@@ -39,6 +39,12 @@ jobs:
             @semantic-release/git
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Do something when a new release published
+        if: steps.release.outputs.new_release_published == 'true'
+        run: |
+          echo ${{ steps.release.outputs.new_release_published }}
+          echo ${{ steps.release.outputs.new_release_version }}
           
   deploy:
     needs: release
