--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           extra_plugins: |
             @semantic-release/changelog@6.0.0
+            @semantic-release/release-notes-generator
             @semantic-release/git
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
